<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_50dp"
    android:gravity="center_horizontal"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/dim_100dp"
        android:layout_height="@dimen/dim_100dp"
        android:src="@drawable/profile_image_two"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_string"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dim_36dp"
        android:textSize="@dimen/dim_16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_string"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dim_8dp"
        android:textSize="@dimen/dim_15sp"/>
       <TextView
           android:layout_marginTop="@dimen/dim_8dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/country_string"
           android:textSize="@dimen/dim_15sp"
           android:drawableStart="@drawable/kenyan_flag"
           android:drawablePadding="@dimen/dim_8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_8dp"
        android:text="@string/email_address_string"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_string"
        android:layout_marginTop="@dimen/dim_8dp"
        android:textSize="@dimen/dim_15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/slack_username"
        android:layout_marginTop="@dimen/dim_8dp"
        android:textSize="@dimen/dim_15sp"/>
</LinearLayout>